[package]
name = "rmidi"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1

[dependencies]
color-eyre = "0.6.5"
creak = "0.3.0"
crossterm = "0.29.0"
ratatui = "0.30.2"
sdl2 = "0.38.0"
symphonia = {version = "0.6.0", features = ["all-codecs"]}
